<resources>
    <string name="app_name">Kuy_Njajan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_wistlist">Wist List</string>
    <string name="title_profil">Profil</string>
    <string name="logo">Logo Kuy Njajan</string>
    <string name="nama">Nama Lengkap</string>
    <string name="username">Nama Akun</string>
    <string name="tlp">No Telepon</string>
    <string name="password">Password</string>
    <string name="btn_daftar">Daftar</string>
    <string name="btn_masuk">Masuk</string>
    <string name="txt_daftar">Belum punya akun? Daftar Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
</resources>